# Qt6

./: README.md
qt6cb-L10-3_PopintersVsCopies/: CMakeLists.txt  main.cpp
qt6cb-L10-4_PointerMemoryManagement/: CMakeLists.txt  main.cpp
qt6cb-L10-5_AutomaticMemoryManagement/: CMakeLists.txt  main.cpp  test.cpp  test.h
qt6cb-L10-6_QObjectParentChild/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  test.cpp  test.h
qt6cb-L10-7_QObjectCannotBeCopied/: CMakeLists.txt  main.cpp
qt6cb-L10_assignment1/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
qt6cb-L11-4_SignalsAndSlotConnect/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
qt6cb-L11-5_Disconnecting/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
qt6cb-L11_6_QProperty/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
qt6cb-L12-8_QObjectCast/: CMakeLists.txt  car.cpp  car.h  feline.h  main.cpp  racecar.cpp  racecar.h
qt6cb-L12_Assignment/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.h
qt6cb-L13-1_ErrorVsException/: CMakeLists.txt  main.cpp
qt6cb-L13_2_throw/: CMakeLists.txt  main.cpp
qt6cb-L13_3_TryCatch/: CMakeLists.txt  main.cpp
qt6cb-L13_4_CatchingExceptions/: CMakeLists.txt  main.cpp
qt6cb-L13_5_STD_Exceptions/: CMakeLists.txt  main.cpp
qt6cb-L13_6_Custom_Handling/: CMakeLists.txt  main.cpp
qt6cb-L13_Assignment/: CMakeLists.txt  main.cpp
qt6cb-L14_1_TemplateFunction/: CMakeLists.txt  main.cpp
qt6cb-L14_2_TemplateIssues/: CMakeLists.txt  main.cpp
qt6cb-L14_3_TemplateClasses/: CMakeLists.txt  Practise.h  main.cpp  test.h
qt6cb-L14_4_TemplateQObject/: CMakeLists.txt  main.cpp
qt6cb-L14_Assignment/: CMakeLists.txt  main.cpp
qt6cb-L15-10_QMap/: CMakeLists.txt  main.cpp  pet.h
qt6cb-L15-1_QObject/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
qt6cb-L15-2_QtIntTypes/: CMakeLists.txt  main.cpp
qt6cb-L15-3_QDateQTimeQDateTime/: CMakeLists.txt  main.cpp
qt6cb-L15-4_QString/: CMakeLists.txt  main.cpp
qt6cb-L15-5_QByteArray/: CMakeLists.txt  main.cpp
qt6cb-L15-6_QVariant/: CMakeLists.txt  main.cpp
qt6cb-L15-7_QStringList/: CMakeLists.txt  main.cpp
qt6cb-L15-8_QList/: CMakeLists.txt  main.cpp
qt6cb-L15-9_QVector/: CMakeLists.txt  main.cpp
qt6cb-L15-Assignment/: CMakeLists.txt  main.cpp
qt6cb-L3_1_HelloWorld/: CMakeLists.txt  main.cpp
qt6cb-L3_2_HelloWorld/: main.cpp
qt6cb-L3_3_HelloWorld/: CMakeLists.txt  main.cpp
qt6cb-L3_assignment1/: CMakeLists.txt  main.cpp
qt6cb-L4_10_LogicalOperators/: CMakeLists.txt  main.cpp
qt6cb-L4_1_Variables/: CMakeLists.txt  main.cpp
qt6cb-L4_2_DataTypes/: CMakeLists.txt  main.cpp
qt6cb-L4_3_Constants/: CMakeLists.txt  main.cpp
qt6cb-L4_4_Enums/: CMakeLists.txt  main.cpp
qt6cb-L4_5_Structs/: CMakeLists.txt  main.cpp
qt6cb-L4_6_Arrays/: CMakeLists.txt  main.cpp
qt6cb-L4_7_ArithmeticOperators/: CMakeLists.txt  main.cpp
qt6cb-L4_8AssignmentOperators/: CMakeLists.txt  main.cpp
qt6cb-L4_9_ComparissonOperators/: CMakeLists.txt  main.cpp
qt6cb-L4_assignment1/: CMakeLists.txt  main.cpp
qt6cb-L5_1_Cout/: CMakeLists.txt  main.cpp
qt6cb-L5_2_Cin/: CMakeLists.txt  main.cpp
qt6cb-L5_3_Cerr/: CMakeLists.txt  main.cpp
qt6cb-L5_4_QDebug/: CMakeLists.txt  main.cpp
qt6cb-L5_assignment1/: CMakeLists.txt  main.cpp
qt6cb-L6_1_If/: CMakeLists.txt  main.cpp
qt6cb-L6_2_IfAndElse/: CMakeLists.txt  main.cpp
qt6cb-L6_3_Ternary/: CMakeLists.txt  main.cpp
qt6cb-L8_2_ConstructorsAndDeConstructors/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
qt6cb-L8_5_Interfaces/: CMakeLists.txt  Freezer.h  Microwave.h  Toaster.h  appliance.cpp  appliance.h  main.cpp
qt6cb-L9_5/: main.cpp  (+1 more)
qt6cb-L9_7_GlobalScope/: CMakeLists.txt  main.cpp
qt6cb-L9_9_StaticFunctionsInlClass/: CMakeLists.txt  main.cpp  test.cpp  test.h
qtcb-L11_7_QTimer/: CMakeLists.txt  main.cpp  test.cpp  test.h
(+100 files in other folders)
